--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "date-fns": "^4.1.0",
-    "expo": "~53.0.9",
+    "expo": "^54.0.9",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.4",
     "expo-camera": "^16.1.6",
@@ -43,7 +43,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.1",
     "react-native-qrcode-svg": "^6.3.15",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
