--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -17,16 +17,11 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          run_install: false
-
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
 
       - name: Install EAS CLI
-        run: pnpm install -g eas-cli
+        run: npm install -g eas-cli
 
       - name: Expo login using token
         run: eas login --token ${{ secrets.EXPO_TOKEN }}
