--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -24,7 +24,8 @@ jobs:
         run: npm install -g eas-cli
 
       - name: Expo login using token
-        run: eas login --token ${{ secrets.EXPO_TOKEN }}
+        run: echo "EAS_TOKEN=${{ secrets.EXPO_TOKEN }}" >> $GITHUB_ENV
+
 
       - name: Build Android APK
         run: eas build --platform android --profile preview --non-interactive --json > build.json
