--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,7 +1,7 @@
 name: Build Android APK (Expo)
 
 on:
-  workflow_dispatch:     # manually trigger
+  workflow_dispatch:
 
 jobs:
   build:
@@ -23,11 +23,9 @@ jobs:
       - name: Install EAS CLI
         run: npm install -g eas-cli
 
-      - name: Expo login using token
-        run: echo "EAS_TOKEN=${{ secrets.EXPO_TOKEN }}" >> $GITHUB_ENV
-
-
       - name: Build Android APK
+        env:
+          EAS_TOKEN: ${{ secrets.EAS_TOKEN }}
         run: eas build --platform android --profile preview --non-interactive --json > build.json
 
       - name: Download built APK from Expo
