--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -7,6 +7,8 @@ jobs:
   build:
     name: Build APK
     runs-on: ubuntu-latest
+    env:
+      EAS_TOKEN: ${{ secrets.EAS_TOKEN }}   # <- set here at job level
 
     steps:
       - name: Checkout code
@@ -24,8 +26,6 @@ jobs:
         run: npm install -g eas-cli
 
       - name: Build Android APK
-        env:
-          EAS_TOKEN: ${{ secrets.EAS_TOKEN }}
         run: eas build --platform android --profile preview --non-interactive --json > build.json
 
       - name: Download built APK from Expo
