--- a/app.json
+++ b/app.json
@@ -27,15 +27,7 @@
     },
     "plugins": [
       "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
-        }
-      ]
+      "expo-barcode-scanner"
     ],
     "experiments": {
       "typedRoutes": true
