--- a/eas.json
+++ b/eas.json
@@ -1,8 +1,17 @@
 {
   "build": {
     "preview": {
+      "developmentClient": false,
+      "distribution": "internal",
       "android": {
         "buildType": "apk"
+      }
+    },
+    "production": {
+      "developmentClient": false,
+      "distribution": "store",
+      "android": {
+        "buildType": "aab"
       }
     }
   }
