--- a/eas.json
+++ b/eas.json
@@ -11,7 +11,7 @@
       "developmentClient": false,
       "distribution": "store",
       "android": {
-        "buildType": "aab"
+        "buildType": "app-bundle"
       }
     }
   }
